fixed misalignment of vector and real pic on click

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,27 @@
 
 // rule: to vertically space things, only add TOP margins
 
+.overlay {
+    position: relative;
+    transition: all 1s;
+}
+
+.overlay:after {
+    content: '\A';
+    position: absolute;
+    width: 100%; 
+    height:100%;
+    top:0; 
+    left:0;
+    background:rgba(0,0,0,0.5);
+    opacity: 1;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+}
+.overlay:hover:after {
+    opacity: 0;
+}
 
 
 body {
